[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://0hby3feg8k8g" path="res://pictures/title_bg_2.png" id="2_6jbdy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jbdy"]
bg_color = Color(0.39853665, 0.60576653, 0.90561056, 0.53333336)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.33566442, 0.19361043, 0.9999874, 1)
shadow_size = 2

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6jbdy")
expand_mode = 2

[node name="Card" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6jbdy")

[node name="Margin" type="MarginContainer" parent="Card"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Card/Margin"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 35
text = "Main Menu"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="StatusLabel" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
